refactor: sonar errors and improve